# quantum-effects

./: .gitignore  README.md
source/: CMakeLists.txt  main.cpp  shader.cpp  source.cpp
source/include/: camera.h  grid.h  quantumRepresentation.h  shader.h  sphere.h
source/lib/: glad.lib  glfw3dll.lib
source/shaders/: fragmentShader.glsl  shader_config.h.in  vertexShader.glsl
